# weebsocket

./: Cargo.toml
examples/: basic.rs  demo.rs
src/: async_client.rs  blocking.rs  error.rs  lib.rs  parse.rs  tls.rs
