[package]
name = "weebsocket"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"

[dependencies]
httparse = "1.0"
http = "0.1"

# TLS
rustls = {version = "0.14", default-features = false, optional = true}
webpki = {version = "0.18", optional = true}
webpki-roots = {version = "0.15", optional = true}

mio = "0.6"

[features]
default = ["tls"]
tls = ["rustls", "webpki", "webpki-roots"]

[profile.release]
lto = true
panic = 'abort'
