[package]
name = "weebsocket"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"

[dependencies]
httparse = "1.0"
http = "0.2"
lazy_static = "1.0"
rustls = {version = "0.16", default-features = false}
webpki = "0.21"
webpki-roots = "0.18"
mio = {version = "0.6", default-features = false}
tokio = {version = "0.2", features = ["tcp", "io-util", "udp", "rt-core", "dns"]}
tokio-rustls = "0.12"

[dev-dependencies]
weeqwest = {git = "https://github.com/saethlin/weeqwest"}
serde = "1.0"
serde_json = "1.0"
